# UPIX

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  jaxpr_1_tmp.txt  jaxpr_2_tmp.txt  log_compiles.txt  notes.md  pedestrian_estimate_Z_tmp.txt  pedestrian_tmp.txt  pyproject.toml  pyrightconfig.json  requirements.txt  sanity_check.txt  test.py  test_advi.py  test_advi_reproducibility.py  test_ais.py  test_async_dispatch_parallelism.py  test_blackjax_multi_chain.py  test_branching_tracer.py  test_cholesky.py  test_coordinate_ascent.py  test_custom_jvp.py  test_data_annealing.py  test_detect_branching.py  test_device_memory.py  test_estimate_Z_from_MCMC.py  test_estimate_evidence.py  test_export.py  test_fullrank_guide.py  test_gamma_exp_grad.py  test_hmc.py  test_hmc_discont.py  test_imports.py  test_inference.py  test_inferenceregime.py  test_jaxpr_io.py  test_jvp.py  (+17 more)
dccxjax/: __init__.py  all.py  coordinate_ascent.py  gibbs.py  inference.py  jax_utils.py  jvp.py  parallelisation.py  plots.py  progress_bar.py  samplecontext.py  slp_gen.py  tracer.py  types.py  utils.py  variable_selector.py
evaluation/: example.py  geometric.py  parse_args.py  setup_parallelisation.py
evaluation_final/: example.py
experiments/: analyse.py  analyse2.py  groundtruth_std.py  plot_scale_viz.py  run_pedestrian_scale.py  scale_plot.py  scale_plot_individual.py  table_1.py  zip_data.py
jax_cache/: jit__broadcast_arrays-ac5c6b41a3b0bc6a4bab4e4590bc631be009b7a353665a5c3ea1eaff244ee592-cache  jit__gamma-23dcfe0c0fe01b1a84f916277d5c01657ffa5ba79c712a4c44e564245cbb0bb4-cache  (+635 more)
(+685 files in other folders)
