[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"upix" = "upix"}

[project]
name = "upix"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.1",
    "matplotlib>=3.10.3",
    "flatbuffers>=25.2.10",
    "numpyro>=0.19.0,<0.20",
    "jax==0.7.1",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
]

[project.optional-dependencies]
cpu = []
cuda = ["jax[cuda]==0.7.1"]
tpu = ["jax[tpu]==0.7.1"]
